--- a/index.html
+++ b/index.html
@@ -6,52 +6,89 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="torso">
-    <img src="images/torso.png" alt="">
-    <!--手臂-->
-    <div class="arm">
-        <div class="left-bicep">
-            <img src="images/left-bicep.png" alt="">
-            <div class="left-forearm">
-                <img src="images/left-forearm.png" alt="">
-            </div>
-        </div>
-        <div class="right-bicep">
-            <img src="images/right-bicep.png" alt="">
-            <div class="right-forearm">
-                <img src="images/right-forearm.png" alt="">
-            </div>
-        </div>
+<div id="canvas">
+    <!--背景开始-->
+    <!--天空开始-->
+    <div class="sky">
+        <div class="cloud-1"><img src="images/cloud1.png" alt=""></div>
+        <div class="cloud-2"><img src="images/cloud1.png" alt=""></div>
+        <div class="cloud-3"><img src="images/cloud2.png" alt=""></div>
+        <div class="cloud-4"><img src="images/cloud2.png" alt=""></div>
+        <div class="cloud-5"><img src="images/cloud3.png" alt=""></div>
+        <div class="cloud-6"><img src="images/cloud3.png" alt=""></div>
+        <div class="cloud-7"><img src="images/cloud4.png" alt=""></div>
+        <div class="cloud-8"><img src="images/cloud4.png" alt=""></div>
     </div>
-    <!--手臂-->
-    <!--腿部-->
-    <div class="leg">
-        <div class="left-thigh">
-            <img src="images/left-thigh.png" alt="">
-            <div class="left-shin">
-                <img src="images/shin.png" alt="">
-                <div class="left-foot">
-                    <img src="images/foot.png" alt="">
-                    <div class="left-toes">
-                        <img src="images/toes.png" alt="" style="width: 26px;">
+    <!--天空结束-->
+    <!--水平线开始-->
+    <div class="horizon"></div>
+    <!--水平线结束-->
+    <!--地面开始-->
+    <div class="ground">
+        <div class="sign-best"><img src="images/best.png" alt=""></div>
+        <div class="sign-no-js"><img src="images/no-js.png" alt=""></div>
+        <div class="sign-lots-of-divs"><img src="images/lots-of-divs.png" alt=""></div>
+        <div class="sign-all-css"><img src="images/all-css.png" alt=""></div>
+    </div>
+    <!--地面结束-->
+    <!--背景结束-->
+    <!--人物开始-->
+    <div class="torso">
+        <img src="images/torso.png" alt="">
+        <!--手臂开始-->
+        <div class="arm">
+            <!--左手臂-->
+            <div class="left-bicep">
+                <img src="images/left-bicep.png" alt="">
+                <div class="left-forearm">
+                    <img src="images/left-forearm.png" alt="">
+                </div>
+            </div>
+            <!--左手臂-->
+            <!--右手臂-->
+            <div class="right-bicep">
+                <img src="images/right-bicep.png" alt="">
+                <div class="right-forearm">
+                    <img src="images/right-forearm.png" alt="">
+                </div>
+            </div>
+            <!--右手臂-->
+        </div>
+        <!--手臂结束-->
+        <!--腿部开始-->
+        <div class="leg">
+            <!--左腿开始-->
+            <div class="left-thigh">
+                <img src="images/left-thigh.png" alt="">
+                <div class="left-shin">
+                    <img src="images/shin.png" alt="">
+                    <div class="left-foot">
+                        <img src="images/foot.png" alt="">
+                        <div class="left-toes">
+                            <img src="images/toes.png" alt="" style="width: 26px;">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="right-thigh">
-            <img src="images/right-thigh.png" alt="">
-            <div class="right-shin">
-                <img src="images/shin.png" alt="">
-                <div class="right-foot">
-                    <img src="images/foot.png" alt="">
-                    <div class="right-toes">
-                        <img src="images/toes.png" alt="" style="width: 26px;">
+            <!--左腿结束-->
+            <!--右腿开始-->
+            <div class="right-thigh">
+                <img src="images/right-thigh.png" alt="">
+                <div class="right-shin">
+                    <img src="images/shin.png" alt="">
+                    <div class="right-foot">
+                        <img src="images/foot.png" alt="">
+                        <div class="right-toes">
+                            <img src="images/toes.png" alt="" style="width: 26px;">
+                        </div>
                     </div>
                 </div>
             </div>
+            <!--右腿结束-->
         </div>
+        <!--腿部结束-->
     </div>
-    <!--腿部-->
+    <!--人物结束-->
 </div>
 </body>
 </html>
